# friendminton

./: .dockerignore  .env.example  .env.production.example  .env.staging.example  .gitignore  Caddyfile  Cargo.toml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml
config/: development.toml  production.toml  staging.toml
docs/: deployment.md
infra/: README.md
migrations/: 20260711000000_init.sql  20260717000000_notifications.sql  20260717010000_rich_posts.sql  20260718000000_player_search.sql  20260719000000_add_workout_duration_milliseconds.sql  20260719010000_paginate_posts.sql  20260719220000_gatherings.sql  20260720000000_gathering_play_details.sql  20260720010000_courts.sql  20260720015000_postgis_locations.sql  20260720020000_groups.sql  20260720022000_round_robin_and_seed_courts.sql  20260721000000_event_workouts.sql  20260721010000_unique_activity_posts.sql  20260722000000_group_cover_images.sql  20260723000000_group_gallery_images.sql  20260724000000_group_postgis_locations.sql  20260724010000_group_coordinate_constraint.sql
mobile/: .env.example  .env.production.example  .env.staging.example  .gitignore  AGENTS.md  App.tsx  app.config.ts  app.json  eas.json  metro.config.js  openapi-ts.config.ts  package.json  pnpm-lock.yaml
scripts/: bootstrap-ecr.sh  deploy-on-host.sh  deploy-release.sh  seed-development.sh  test-deploy-on-host.sh
seeds/: development.sql
src/: accounts.rs  activities.rs  app.rs  auth.rs  config.rs  controller.rs  courts.rs  db.rs  engagement.rs  error.rs  gatherings.rs  groups.rs  main.rs  media.rs  models.rs  (+3 more)
(+170 files in other folders)
